--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
+    "@tanstack/react-form": "^1.11.3",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
     "axios-cache-interceptor": "^1.7.0",
@@ -24,7 +25,8 @@
     "react-router-dom": "^7.3.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "zod": "^3.25.23"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -33,12 +35,13 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
-    "eslint": "^9.21.0",
+    "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "prettier": "^3.5.3",
     "sass-embedded": "^1.85.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
