--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-form": "^1.11.3",
+    "@tanstack/react-table": "^8.21.3",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
     "axios-cache-interceptor": "^1.7.0",
