--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
   "eslint.nodePath": "${workspaceFolder}/node_modules",
   "eslint.runtime": "node",
   "eslint.format.enable": true,
-  "eslint.enable": false, 
+  "eslint.enable": true, 
+    "eslint.quiet": true,
   "editor.defaultFormatter": "dbaeumer.vscode-eslint",
 }
