--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
-    "@tanstack/react-form": "^1.11.3",
+    "@tanstack/react-form": "^1.12.2",
     "@tanstack/react-table": "^8.21.3",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
