--- a/package.json
+++ b/package.json
@@ -11,23 +11,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
-    "@tanstack/react-form": "^1.11.3",
+    "@tanstack/react-form": "^1.14.1",
+    "@tanstack/react-query": "^5.77.1",
     "@tanstack/react-table": "^8.21.3",
-    "antd": "^5.24.4",
+    "@tanstack/zod-form-adapter": "^0.42.1",
+    "@types/next": "^8.0.7",
+    "antd": "^5.25.3",
     "axios": "^1.8.4",
     "axios-cache-interceptor": "^1.7.0",
     "jsurl": "^0.1.5",
+    "next": "^15.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.56.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "tailwindcss": "^4.0.14",
-    "zod": "^3.25.23"
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
