--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd": "^5.25.3",
     "axios": "^1.8.4",
     "axios-cache-interceptor": "^1.7.0",
+    "dayjs": "^1.11.13",
     "jsurl": "^0.1.5",
     "next": "^15.3.5",
     "react": "^18.2.0",
