--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
@@ -23,6 +27,7 @@
     "axios": "^1.8.4",
     "axios-cache-interceptor": "^1.7.0",
     "jsurl": "^0.1.5",
+    "lucide-react": "^0.525.0",
     "next": "^15.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
